WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205255
[LFC][IFC] Should use the term collapsed/collapsible instead of trimmed/trimmable
https://bugs.webkit.org/show_bug.cgi?id=205255
Summary
[LFC][IFC] Should use the term collapsed/collapsible instead of trimmed/trimm...
alan
Reported
2019-12-15 17:48:21 PST
While trimming is a spec term too, collapsing is a bit closer to spec language.
Attachments
Patch
(32.99 KB, patch)
2019-12-15 17:56 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-15 17:48:41 PST
<
rdar://problem/57954672
>
alan
Comment 2
2019-12-15 17:56:10 PST
Created
attachment 385729
[details]
Patch
alan
Comment 3
2019-12-16 06:40:35 PST
Committed
r253549
: <
https://trac.webkit.org/changeset/253549
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug